# bjj-schnorr

./: .gitignore  Cargo.toml  package.json
circuits/: schnorr.circom
contracts/: SchnorrVerifier.sol
crates/schnorr-core/: Cargo.toml
crates/schnorr-core/src/: curve.rs  hash.rs  keypair.rs  lib.rs  sign.rs  verify.rs
crates/schnorr-witness/: Cargo.toml
crates/schnorr-witness/src/: lib.rs  main.rs  witness_builder.rs
scripts/: e2e_test.sh  prove.sh  setup.sh  verify.sh
